--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "oauth": "0.9.7",
     "socket.io": "0.9.6",
     "mongojs": "0.4.2",
-    "connect": "2.2.2",
+    "connect": "2.2.2"
   },
   "devDependencies": {},
   "optionalDependencies": {},
